# EY-AI-Model-Provenance-Kit-

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.tape  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
benchmarks/: Benchmark_All.json  run_benchmark.ipynb
docs/: architecture.md  database-and-caching.md  scoring-and-model-loading.md  signals.md
docs/constitution/: model_provenance_constitution.md
src/provenancekit/: __init__.py  cli.py  exceptions.py
src/provenancekit/config/: __init__.py  constants.py  settings.py
src/provenancekit/core/: __init__.py  base.py  lookup.py  scanner.py  scoring.py
src/provenancekit/core/results/: __init__.py  formatters.py
src/provenancekit/core/signals/: __init__.py  anchors.py  metadata.py  streamers.py  tokenizer.py  weight_signals.py
src/provenancekit/data/: __init__.py
src/provenancekit/data/database/: README.md  __init__.py
src/provenancekit/data/database/catalog/: manifest.json
src/provenancekit/data/database/catalog/by-family/: 01ai--yi.json  allenai--bolmo.json  allenai--olmo.json  bigcode--starcoder.json  bigscience--bloom.json  codellama--codellama.json  coherelabs--aya.json  deepseekai--deepseek.json  eleutherai--gpt.json  eleutherai--pythia.json  facebookai--roberta.json  facebookai--xlm_roberta.json  google--gemma.json  googlebert--bert.json  huggingfaceh4--zephyr.json  huggingfacetb--smollm.json  ibmgranite--granite.json  internlm--internlm.json  liquidai--lfm.json  metallama--llama.json  microsoft--nextcoder.json  microsoft--phi.json  mistralai--ministral.json  mistralai--mistral.json  nousresearch--hermes.json  nousresearch--nouscoder.json  nvidia--nemotron.json  openaicommunity--gpt.json  openbmb--minicpm.json  qwen--qwen.json  stabilityai--stablelm.json  tencent--hymt.json  tencent--wedlm.json  thudm--glm.json  (+5 more)
src/provenancekit/models/: __init__.py  parsing.py  results.py  signals.py  storage.py
src/provenancekit/services/: __init__.py  cache.py  database.py  download.py  model_loader.py
src/provenancekit/utils/: __init__.py  logging.py  tensor.py
tests/: conftest.py  test_cli.py  test_exceptions.py  test_trust_remote_code.py
tests/config/: test_constants.py  test_settings.py
tests/core/: test_scanner.py  test_scoring.py
tests/core/results/: test_formatters.py
tests/core/signals/: __init__.py  test_anchors.py  test_metadata.py  test_streamers.py  test_tokenizer.py  test_weight_signals.py
tests/models/: test_parsing.py  test_results.py  test_signals.py
tests/services/: test_cache.py  test_database.py  test_download.py  test_model_loader.py
tests/utils/: test_tensor.py
(+152 files in other folders)
